kubernetes/apps/default/authelia/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
spec:
  parentRefs:
  - name: internal
    namespace: kube-system
    sectionName: https
  hostnames: ["auth.endsys.cloud"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - name: authelia
          port: 80
